# feature_detector

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: sift.yaml
in/: train.txt
include/feature_detector/: match.h  sift.h
launch/: sift.launch
src/: basic_sift.cxx  flann_sift.cxx  knn_sift.cxx  sample.cxx  sift.cxx
